// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches the snapshot 2 1`] = `
<div
  className="sample"
>
  <div
    className="sampleButton"
    data-testid="button"
  >
     
    this is a button
     
  </div>
</div>
`;

exports[`matches snapshot 1`] = `
<div
  className="sample"
>
  <div
    className="sampleButton"
    data-testid="button"
  >
     
    save me
     
  </div>
</div>
`;
